--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,11 +1,11 @@
 span.counter {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   text-align: right;
   float: right;
 }
 
 input {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   background: #0066bf;
   color: white;
   float: left;
@@ -13,12 +13,15 @@ input {
 
 textarea {
   font-weight: bold;
-  text-align: center
+  text-align: center;
   font-size: 24px;
   background-color: #f4f1ec;
-  font-family: 'Source Sans Pro', sans-serif;
+  font-family: "Source Sans Pro", sans-serif;
   width: 100%;
   border: 0;
   border-bottom: 2px solid black;
 }
 
+span.counter.red {
+  color: red;
+}
