Tweet Dynamically Created

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -3,6 +3,8 @@
  * https://css-tricks.com/international-box-sizing-awareness-day/
  * Do not modify these two selectors, please
  */
+ @media only screen and (max-width: 1024px) {}
+   @media only screen and (min-width: 1024px) {}
 html {
   box-sizing: border-box;
 }
@@ -19,7 +21,7 @@ body {
   background-color: #f4f1ec;
   font-size: 24px;
   font-family: 'Source Sans Pro', sans-serif;
-  padding-top: 540px;
+  padding-top: 120px;
 }
 
 main {
