--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,12 +1,12 @@
-header {
+.main {
   font-family: 'Bungee', cursive;
-  position: fixed;
+  /* position: fixed; */
   width: 100%;
-  /* height: 400px; */
+  height: 400px;
   background-color: #e09d38;
   background-image: url("https://www.transparenttextures.com/patterns/connected.png");
-  /* This is mostly intended for prototyping; please download the pattern and re-host for production environments. Thank you! */
   top: 120px;
+  z-index: 10;
   }
 
 header h2 {text-align: center;}
