--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,19 +1,46 @@
 .main {
-  font-family: 'Bungee', cursive;
+  font-family: "Bungee", cursive;
   /* position: fixed; */
   width: 100%;
   height: 400px;
   background-color: #e09d38;
   background-image: url("https://www.transparenttextures.com/patterns/connected.png");
   top: 120px;
-  z-index: 10;
-  }
+  z-index: 15;
+}
 
-header h2 {text-align: center;}
+header h2 {
+  text-align: center;
+}
 
 .avatar {
   padding-top: 1em;
   margin: auto;
   text-align: center;
+}
 
+@media only screen and (min-width: 1024px) {
+  .avatar {
+    padding-top: 1em;
+    margin: auto;
+    text-align: center;
+  }
+  .main {
+  font-family: "Bungee", cursive;
+  /* position: fixed; */
+  width: 30%;
+  display: flex;
+  flex-direction:column;
+  justify-content:space-between;
+
+  max-height: 20em;
+  background-color: #e09d38;
+  background-image: url("https://www.transparenttextures.com/patterns/connected.png");
+  top: 120px;
+  z-index: 2;
+}
+
+header h2 {
+  text-align: center;
+}
 }
