--- a/public/styles/tweetArticle.css
+++ b/public/styles/tweetArticle.css
@@ -1,3 +1,5 @@
+/* Generated Tweet CSS */
+
 .tweetArticle {
   display: flex;
   margin-top: 3em;
@@ -38,4 +40,13 @@
   box-shadow: 10px 10px 5px lightgray;
   color: #545149;
   font-weight: lighter;
+}
+
+.tweetArticle .icons {
+  width: 50px;
+    height: 25px;
+}
+
+.tweetArticle .timestamp {
+  font-size: small;
 }
